# 3dPrinting-Slicer

./: CMakeLists.txt  LineSegmentUnitTest.cpp  MainWindowUtility.cpp  MainWindowUtility.h  MyVectorUnitTest.cpp  PlaneUnitTest.cpp  README.md  SlicerUnitTest.cpp  TriangleMeshUnitTest.cpp  TriangleUnitTest.cpp  linesegment.cpp  linesegment.h  mainwindow.cpp  mainwindow.h  mainwindowform.ui  myvector.cpp  myvector.h  plane.cpp  plane.h  slicer.cpp  slicer.h  trackballcameracontroller.cpp  trackballcameracontroller.h  triangle.cpp  triangle.h  trianglemesh.cpp  trianglemesh.h
models/: 20mm_cube_corrupt.stl  Screw large.STL  models.qrc
